fix for too small textbox when editing page

--- a/css/dokuwikicompatibility.css
+++ b/css/dokuwikicompatibility.css
@@ -5,6 +5,9 @@
     white-space: normal;
 }
 
-#dw__editform textarea {
+.editBar .edit,
+#dw__editform textarea 
+{
     width: auto;
 }
+
